# ndi-streamer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO  TODO.txt
cmake/: FindFFMPEG.cmake  FindNDISDK.cmake
src/: app.cpp  app.hpp  asyncndisource.cpp  asyncndisource.hpp  audioresampler.cpp  audioresampler.hpp  averror.cpp  averror.hpp  conditionalsleep.cpp  conditionalsleep.hpp  cudaapp.cpp  cudaapp.hpp  cudadecoder.cpp  cudadecoder.hpp  cudafilter.cpp  cudafilter.hpp  decoder.cpp  decoder.hpp  demuxer.cpp  demuxer.hpp  frame.cpp  frame.hpp  frametimer.cpp  frametimer.hpp  macro.hpp  mtavserver.cpp  mtavserver.hpp  ndi-streamer.cpp  ndi.cpp  ndi.hpp  ndiavserver.cpp  ndiavserver.hpp  ndierror.cpp  ndierror.hpp  ndisender.cpp  ndisender.hpp  ndisource.cpp  ndisource.hpp  ndistreamer.cpp  ndistreamercuda.cpp  (+16 more)
tests/: CMakeLists.txt  asyncndisource_test.cpp  audioresampler_test.cpp  decoder_test.cpp  demuxer_test.cpp  mtavserver_test.cpp  ndisource_test.cpp  pixelencoder_test.cpp
